Se cambió el numero de contacto

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <h4>Dirección</h4>
                         <p>Av. Ruiz Cortines 6402 Local 3, Portal de Cumbres 1o. Sector, 64348 Monterrey, N.L.</p>
                         <h4>Teléfono y whatssapp</h4>
-                        <p><a href="tel:+528116919327">+52 8116919327</a></p>
+                        <p><a href="tel:++5218118055968">+52 1 81 1805 5968</a></p>
                         <h4>Correo Electrónico</h4>
                         <p><a href="mailto:osbaldo_cl@hotmail.com">osbaldo_cl@hotmail.com</a></p>
                     </div>
