Se comentó todo lo que tiene que ver con el servicio a domicilio ya que no está disponible y se cambio por el servicio de autollenado

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <section id="hero" class="d-flex align-items-center justify-content-center" style="background-image: url('images/osxipura_landing.PNG'); height: 100vh; background-size: cover; background-position: center;">
             <div class="text-center text-white text-container">
                 <h1 class="display-3" style="font-weight: bold; text-shadow: -1px -1px 0 #000,  1px -1px 0 #000, -1px  1px 0 #000, 1px  1px 0 #000;">Agua Pura y Cristalina</h1>
-                <p class="display-4" style="font-weight: bold; text-shadow: -1px -1px 0 #000,  1px -1px 0 #000, -1px  1px 0 #000, 1px  1px 0 #000;">Servicio a domicilio disponible</p>
-                <a href="#contacto" class="btn btn-primary btn-lg">Contáctanos</a>
+                <!--<p class="display-4" style="font-weight: bold; text-shadow: -1px -1px 0 #000,  1px -1px 0 #000, -1px  1px 0 #000, 1px  1px 0 #000;">Servicio a domicilio disponible</p> -->
+                <a href="#contacto" class="btn btn-primary btn-lg" style="margin-top: 80px;">Contáctanos</a>
             </div>
         </section>
     
@@ -54,10 +54,15 @@
                         <p>Ofrecemos un completo lavado de garrafon dentro de las instalaciones para asegurar la maxima calidad.</p>
                     </div>
                     <div class="col-md-4">
+                        <img src="images/autollenado_24_horas.png" alt="Servicio 3" class="img-fluid mb-3">
+                        <h4>autollenado</h4>
+                        <p>Ofrecemos un servicio de autollenado dispoinble las 24 horas para su comodidad.</p>
+                    </div>
+                    <!--<div class="col-md-4">
                         <img src="images/delivery_icon.png" alt="Servicio 3" class="img-fluid mb-3">
                         <h4>Entrega a Domicilio</h4>
                         <p>Llevamos el agua purificada directamente a tu puerta en el menor tiempo posible.</p>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </section>
